--- a/substratee-node-calls/Cargo.toml
+++ b/substratee-node-calls/Cargo.toml
@@ -11,10 +11,10 @@ primitive-types = { version = "0.6", default-features = false, features = ["code
 base58 			        = "0.1"
 
 [dependencies.my_node_runtime]
-git = "https://github.com/scs/substraTEE-node"
+git = "https://github.com/encointer/encointer-node"
 #tag = "v0.6.1"
-branch = "alpha.7"
-package = "substratee-node-runtime"
+branch = "sgx-master"
+package = "encointer-node-runtime"
 
 [dependencies.substrate-api-client]
 git = "https://github.com/scs/substrate-api-client"
