add first stf function to cli

--- a/enclave/Cargo.toml
+++ b/enclave/Cargo.toml
@@ -72,7 +72,7 @@ rev      = "sgx_1.1.2"
 features = ["dangerous_configuration"]
 
 [dependencies.sp-io]
-git = "https://github.com/scs/sgx-runtime"
+git = "https://github.com/encointer/sgx-runtime"
 default-features = false
 optional = true
 package = "sp-io"
@@ -114,8 +114,8 @@ default-features = false
 features = ["sgx"]
 
 [dependencies.sgx-externalities]
-git = "https://github.com/scs/sgx-runtime"
+git = "https://github.com/encointer/sgx-runtime"
 default-features = false
 
 [patch.crates-io]
-sp-io = { git = "https://github.com/scs/sgx-runtime", default-features = false, features = ["disable_oom", "disable_panic_handler", "disable_allocator", "sgx"]}
+sp-io = { git = "https://github.com/encointer/sgx-runtime", default-features = false, features = ["disable_oom", "disable_panic_handler", "disable_allocator", "sgx"]}
