--- a/enclave/chain_relay/Cargo.toml
+++ b/enclave/chain_relay/Cargo.toml
@@ -33,7 +33,7 @@ default-features = false
 
 [dependencies.sp-io]
 default-features = false
-git = "https://github.com/scs/sgx-runtime"
+git = "https://github.com/encointer/sgx-runtime"
 package = "sp-io"
 features = ["disable_oom", "disable_panic_handler", "disable_allocator", "sgx"]
 
