--- a/enclave/chain_relay/Cargo.toml
+++ b/enclave/chain_relay/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "chain-relay"
-version = "0.6.11-sub2.0.0-alpha.7"
+version = "0.6.12-sub2.0.0"
 authors = ["Supercomputing Systems AG <info@scs.ch>"]
 edition = "2018"
 
@@ -19,7 +19,7 @@ num             = { package = "num-traits", version = "0.2", default-features = 
 [dependencies.codec]
 package = "parity-scale-codec"
 features = ["derive"]
-version = "1.3.0"
+version = "1.3.1"
 default-features=false
 
 [dependencies.finality-grandpa]
@@ -28,39 +28,39 @@ default-features = false
 features = ["derive-codec"]
 
 [dependencies.frame-system]
-version = "2.0.0-alpha.7"
+version = "2.0.0"
 default-features = false
 
 [dependencies.sp-io]
 default-features = false
 git = "https://github.com/encointer/sgx-runtime"
-tag = "v0.6.11-sub2.0.0-alpha.7"
+tag = "v0.6.12-sub2.0.0"
 package = "sp-io"
 features = ["disable_oom", "disable_panic_handler", "disable_allocator", "sgx"]
 
 [dependencies.sp-core]
-version = '2.0.0-alpha.7'
+version = '2.0.0'
 default-features = false
 features = ["full_crypto"]
 
 [dependencies.sp-application-crypto]
-version = '2.0.0-alpha.7'
+version = '2.0.0'
 default-features = false
 features = ["full_crypto"]
 
 [dependencies.sp-finality-grandpa]
-version = '2.0.0-alpha.7'
+version = '2.0.0'
 default-features = false
 
 [dependencies.sp-runtime]
-version = '2.0.0-alpha.7'
+version = '2.0.0'
 default-features = false
 
 [dependencies.sp-runtime-interface]
-version = '2.0.0-alpha.7'
+version = '2.0.0'
 default-features = false
 features = ["disable_target_static_assertions"]
 
 [dependencies.sp-trie]
-version = '2.0.0-alpha.7'
+version = '2.0.0'
 default-features = false
