--- a/worker/worker-api/Cargo.toml
+++ b/worker/worker-api/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "substratee-worker-api"
-version = "0.6.11-sub2.0.0-alpha.7"
+version = "0.6.12-sub2.0.0"
 authors = ["Supercomputing Systems AG <info@scs.ch>"]
 edition = "2018"
 
@@ -11,10 +11,10 @@ hex	= "0.4"
 serde_json = "1.0"
 serde_derive = "1.0"
 sgx_crypto_helper = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
-codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
+codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
 
 [dependencies.sp-core]
-version = '2.0.0-alpha.7'
+version = '2.0.0'
 
 [dependencies.substratee-stf]
 path = "../../stf"
