--- a/worker/worker-api/Cargo.toml
+++ b/worker/worker-api/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Supercomputing Systems AG <info@scs.ch>"]
 edition = "2018"
 
 [dependencies]
-ws = "0.7"
+ws = { version = "0.7", features = ["ssl"] } 
 log = "0.4"
 hex	= "0.4"
 serde_json = "1.0"
