--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "encointer-client-teeproxy"
-version = "0.6.13-sub2.0.0"
+version = "0.6.14"
 authors = ["Supercomputing Systems AG <info@scs.ch>"]
 edition = "2018"
 
@@ -23,30 +23,34 @@ geojson = "0.17"
 [dependencies.encointer-scheduler]
 default-features = false
 git = "https://github.com/encointer/pallets"
-tag = "v0.3.6"
+tag = "v0.3.7"
 package = "pallet-encointer-scheduler"
 
 [dependencies.encointer-ceremonies]
 default-features = false
 git = "https://github.com/encointer/pallets"
-tag = "v0.3.6"
+tag = "v0.3.7"
 package = "pallet-encointer-ceremonies"
 
 [dependencies.encointer-currencies]
 default-features = false
 git = "https://github.com/encointer/pallets"
-tag = "v0.3.6"
+tag = "v0.3.7"
 package = "pallet-encointer-currencies"
 
 [dependencies.encointer-balances]
 default-features = false
 git = "https://github.com/encointer/pallets"
-tag = "v0.3.6"
+tag = "v0.3.7"
 package = "pallet-encointer-balances"
 
 [dependencies.substrate-api-client]
 git = "https://github.com/scs/substrate-api-client"
-tag = "v0.4.10-sub2.0.0"
+tag = "v0.4.12"
+
+[dependencies.substrate-client-keystore]
+git = "https://github.com/scs/substrate-api-client"
+tag = "v0.4.12"
 
 [dependencies.serde]
 features = ["derive"]
@@ -60,20 +64,25 @@ features = ["derive"]
 version = "1.3.1"
 
 [dependencies.sp-core]
-version = '2.0.0'
+git = "https://github.com/paritytech/substrate.git"
+rev = "a208da16"
 
 [dependencies.sp-runtime]
-version = '2.0.0'
+git = "https://github.com/paritytech/substrate.git"
+rev = "a208da16"
 
 [dependencies.sc-keystore]
-version = '2.0.0'
+git = "https://github.com/paritytech/substrate.git"
+rev = "a208da16"
 
 [dependencies.pallet-balances]
-version = '2.0.0'
+git = "https://github.com/paritytech/substrate.git"
+rev = "a208da16"
 default-features=false
 
 [dependencies.frame-system]
-version = '2.0.0'
+git = "https://github.com/paritytech/substrate.git"
+rev = "a208da16"
 default-features=false
 
 [dependencies.my-node-runtime]
@@ -88,10 +97,12 @@ path = "../stf"
 path = "../worker/worker-api"
 
 [dependencies.sp-keyring]
-version = '2.0.0'
+git = "https://github.com/paritytech/substrate.git"
+rev = "a208da16"
 
 [dependencies.sp-application-crypto]
-version = '2.0.0'
+git = "https://github.com/paritytech/substrate.git"
+rev = "a208da16"
 
 #[patch.crates-io]
 #ed25519-dalek = { git = "https://github.com/scs/ed25519-dalek.git", branch = "no_std_sgx"}
