--- a/stf/Cargo.toml
+++ b/stf/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "substratee-stf"
-version = "0.6.13-sub2.0.0"
+version = "0.6.14"
 authors = ["Supercomputing Systems AG <info@scs.ch>"]
 edition = "2018"
 
@@ -26,12 +26,13 @@ std = [
     "encointer-ceremonies/std",
     "hex",
     "substrate-api-client",
+    "substrate-client-keystore",
     "my-node-runtime"
 ]
 
 [dependencies]
-log-sgx             = { version = "0.4", package = "log", git = "https://github.com/mesalock-linux/log-sgx", optional = true }
-env_logger          = { version = "0.7", git = "https://github.com/mesalock-linux/env_logger-sgx", optional = true }
+log-sgx             = { rev = "sgx_1.1.3", package = "log", git = "https://github.com/mesalock-linux/log-sgx", optional = true }
+env_logger          = { rev = "sgx_1.1.3", git = "https://github.com/mesalock-linux/env_logger-sgx", optional = true }
 clap                = { version = "2.33", optional = true }
 clap-nested         = { version = "0.3.1", optional = true }
 log                 = { version = "0.4", optional = true }
@@ -42,7 +43,7 @@ hex                 = { version = "*", optional = true }
 [dependencies.sgx_tstd]
 git = "https://github.com/apache/teaclave-sgx-sdk.git"
 features = ["untrusted_fs","net","backtrace"]
-rev = "v1.1.2"
+rev = "v1.1.3"
 optional = true
 
 [dependencies.codec]
@@ -54,25 +55,25 @@ features = ["derive"]
 [dependencies.encointer-scheduler]
 default-features = false
 git = "https://github.com/encointer/pallets"
-tag = "v0.3.6"
+tag = "v0.3.7"
 package = "pallet-encointer-scheduler"
 
 [dependencies.encointer-ceremonies]
 default-features = false
 git = "https://github.com/encointer/pallets"
-tag = "v0.3.6"
+tag = "v0.3.7"
 package = "pallet-encointer-ceremonies"
 
 [dependencies.encointer-currencies]
 default-features = false
 git = "https://github.com/encointer/pallets"
-tag = "v0.3.6"
+tag = "v0.3.7"
 package = "pallet-encointer-currencies"
 
 [dependencies.encointer-balances]
 default-features = false
 git = "https://github.com/encointer/pallets"
-tag = "v0.3.6"
+tag = "v0.3.7"
 package = "pallet-encointer-balances"
 
 [dependencies.fixed]
@@ -90,53 +91,66 @@ optional = true
 [dependencies.system]
 default-features = false
 package = 'frame-system'
-version = '2.0.0'
+git = "https://github.com/paritytech/substrate.git"
+rev = "a208da16"
 
 [dependencies.support]
 default-features = false
 package = 'frame-support'
-version = '2.0.0'
+git = "https://github.com/paritytech/substrate.git"
+rev = "a208da16"
 
 [dependencies.metadata]
-version = '11.0.0-alpha.6'
+git = "https://github.com/paritytech/substrate.git"
+rev = "a208da16"
 package = "frame-metadata"
 default-features=false
 
 [dependencies.sp-core]
-version = '2.0.0'
+git = "https://github.com/paritytech/substrate.git"
+rev = "a208da16"
 default-features = false
 features = ["full_crypto"]
 
 [dependencies.sp-application-crypto]
-version = '2.0.0'
+git = "https://github.com/paritytech/substrate.git"
+rev = "a208da16"
 default-features = false
 features = ["full_crypto"]
 
 [dependencies.sp-runtime]
-version = '2.0.0'
+git = "https://github.com/paritytech/substrate.git"
+rev = "a208da16"
 default-features = false
 
 [dependencies.sp-io]
 default-features = false
 git = "https://github.com/encointer/sgx-runtime"
-tag = "v0.6.12-sub2.0.0"
+tag = "v0.6.14"
 features = ["disable_oom", "disable_panic_handler", "disable_allocator", "sgx"]
 optional = true
 
 [dependencies.sgx-runtime]
 default-features = false
 git = "https://github.com/encointer/sgx-runtime"
-tag = "v0.6.12-sub2.0.0"
+tag = "v0.6.14"
 optional = true
 
 [dependencies.substrate-api-client]
 git = "https://github.com/scs/substrate-api-client"
-tag = "v0.4.10-sub2.0.0"
+tag = "v0.4.12"
+optional = true
+
+[dependencies.substrate-client-keystore]
+git = "https://github.com/scs/substrate-api-client"
+tag = "v0.4.12"
 optional = true
 
 [dependencies.sc-keystore]
-version = '2.0.0'
+git = "https://github.com/paritytech/substrate.git"
+rev = "a208da16"
 optional = true
 
 [dev-dependencies.sp-keyring]
-version = '2.0.0'
+git = "https://github.com/paritytech/substrate.git"
+rev = "a208da16"
