--- a/substratee-node-primitives/Cargo.toml
+++ b/substratee-node-primitives/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "substratee-node-primitives"
-version = "0.6.13-sub2.0.0"
+version = "0.6.14"
 authors = ["clangenbacher <christian.langenbacher@scs.ch>"]
 edition = "2018"
 
@@ -13,7 +13,7 @@ base58 			= { version = "0.1", optional = true }
 [dependencies.sgx_tstd]
 git = "https://github.com/apache/teaclave-sgx-sdk.git"
 features = ["untrusted_fs","net","backtrace"]
-rev = "v1.1.2"
+rev = "v1.1.3"
 optional = true
 
 [dependencies.my-node-runtime]
@@ -25,15 +25,17 @@ default-features = false
 
 [dependencies.substrate-api-client]
 git = "https://github.com/scs/substrate-api-client"
-tag = "v0.4.10-sub2.0.0"
+tag = "v0.4.12"
 optional = true
 
 [dependencies.sp-core]
-version = '2.0.0'
+git = "https://github.com/paritytech/substrate.git"
+rev = "a208da16"
 default-features = false
 
 [dependencies.sp-runtime]
-version = '2.0.0'
+git = "https://github.com/paritytech/substrate.git"
+rev = "a208da16"
 default-features = false
 optional = true
 
