--- a/worker/worker-api/Cargo.toml
+++ b/worker/worker-api/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "substratee-worker-api"
-version = "0.6.13-sub2.0.0"
+version = "0.6.14"
 authors = ["Supercomputing Systems AG <info@scs.ch>"]
 edition = "2018"
 
@@ -10,11 +10,12 @@ log = "0.4"
 hex	= "0.4"
 serde_json = "1.0"
 serde_derive = "1.0"
-sgx_crypto_helper = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
+sgx_crypto_helper = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
 codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
 
 [dependencies.sp-core]
-version = '2.0.0'
+git = "https://github.com/paritytech/substrate.git"
+rev = "a208da16"
 
 [dependencies.substratee-stf]
 path = "../../stf"
