--- a/enclave/Cargo.toml
+++ b/enclave/Cargo.toml
@@ -34,8 +34,8 @@ ofb               = { version = "0.1.1" }
 codec             = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
 primitive-types   = { version = "0.6", default-features = false, features = ["codec"] }
 sgx-crypto-helper = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", package = "sgx_tcrypto_helper" }
-log               = { rev = "sgx_1.1.3", git = "https://github.com/mesalock-linux/log-sgx" }
-env_logger        = { rev = "sgx_1.1.3", git = "https://github.com/mesalock-linux/env_logger-sgx" }
+log               = { git = "https://github.com/mesalock-linux/log-sgx" }
+env_logger        = { git = "https://github.com/mesalock-linux/env_logger-sgx" }
 serde        	  = { rev = "sgx_1.1.3", git = "https://github.com/mesalock-linux/serde-sgx" }
 serde_json        = { rev = "sgx_1.1.3", git = "https://github.com/mesalock-linux/serde-json-sgx"}
 lazy_static       = { version = "1.1.0", features = ["spin_no_std"] }
@@ -138,16 +138,16 @@ branch = "w-nstd"
 default-features = false
 
 [patch.crates-io]
-log = { git = "https://github.com/mesalock-linux/log-sgx", rev = "sgx_1.1.3" }
-env_logger = { git = "https://github.com/mesalock-linux/env_logger-sgx", rev = "sgx_1.1.3" } 
+log = { git = "https://github.com/mesalock-linux/log-sgx", version = "0.4.8" }
+env_logger = { git = "https://github.com/mesalock-linux/env_logger-sgx", default-features = false, features = ["mesalock_sgx"] } 
 
 [patch."https://github.com/paritytech/substrate"]
-log = { git = "https://github.com/mesalock-linux/log-sgx", rev = "sgx_1.1.3" }
-env_logger = { git = "https://github.com/mesalock-linux/env_logger-sgx", rev = "sgx_1.1.3" } 
-#sp-io = { path = "../../encointer-sgx-runtime/substrate-sgx/sp-io", default-features = false, features = ["disable_oom", "disable_panic_handler", "disable_allocator", "sgx"]}
-sp-io = { tag = "v0.6.14", git = "https://github.com/encointer/sgx-runtime", default-features = false, features = ["disable_oom", "disable_panic_handler", "disable_allocator", "sgx"]}
+log = { git = "https://github.com/mesalock-linux/log-sgx", version = "0.4.8" }
+env_logger = { git = "https://github.com/mesalock-linux/env_logger-sgx", default-features = false, features = ["mesalock_sgx"] } 
+sp-io = { path = "../../encointer-sgx-runtime/substrate-sgx/sp-io", default-features = false, features = ["disable_oom", "disable_panic_handler", "disable_allocator", "sgx"]}
+#sp-io = { tag = "v0.6.14", git = "https://github.com/encointer/sgx-runtime", default-features = false, features = ["disable_oom", "disable_panic_handler", "disable_allocator", "sgx"]}
 
-#[patch."https://github.com/encointer/sgx-runtime"]
-#sgx-runtime = { path = "../../encointer-sgx-runtime/runtime", default-features = false }
-#sp-io = { path = "../../encointer-sgx-runtime/substrate-sgx/sp-io", default-features = false, features = ["disable_oom", "disable_panic_handler", "disable_allocator", "sgx"]}
-#sgx-externalities = { path = "../../encointer-sgx-runtime/substrate-sgx/externalities", default-features = false}
+[patch."https://github.com/encointer/sgx-runtime"]
+sgx-runtime = { path = "../../encointer-sgx-runtime/runtime", default-features = false }
+sp-io = { path = "../../encointer-sgx-runtime/substrate-sgx/sp-io", default-features = false, features = ["disable_oom", "disable_panic_handler", "disable_allocator", "sgx"]}
+sgx-externalities = { path = "../../encointer-sgx-runtime/substrate-sgx/externalities", default-features = false}
