--- a/enclave/chain_relay/Cargo.toml
+++ b/enclave/chain_relay/Cargo.toml
@@ -13,7 +13,7 @@ sgx_types     = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-
 [dependencies]
 derive_more     = { version = "0.99.5" }
 hash-db         = { version = "0.15.2", default-features = false }
-log             = { rev = "sgx_1.1.3", git = "https://github.com/mesalock-linux/log-sgx" }
+log             = { git = "https://github.com/mesalock-linux/log-sgx" }
 num             = { package = "num-traits", version = "0.2", default-features = false }
 
 [dependencies.codec]
