--- a/stf/Cargo.toml
+++ b/stf/Cargo.toml
@@ -31,8 +31,8 @@ std = [
 ]
 
 [dependencies]
-log-sgx             = { rev = "sgx_1.1.3", package = "log", git = "https://github.com/mesalock-linux/log-sgx", optional = true }
-env_logger          = { rev = "sgx_1.1.3", git = "https://github.com/mesalock-linux/env_logger-sgx", optional = true }
+log-sgx             = { package = "log", git = "https://github.com/mesalock-linux/log-sgx", optional = true }
+env_logger          = { git = "https://github.com/mesalock-linux/env_logger-sgx", optional = true }
 clap                = { version = "2.33", optional = true }
 clap-nested         = { version = "0.3.1", optional = true }
 log                 = { version = "0.4", optional = true }
