--- a/enclave/Cargo.toml
+++ b/enclave/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "substratee-worker-enclave"
-version = "0.6.14"
+version = "0.6.15"
 authors = ["Supercomputing Systems AG <info@scs.ch>"]
 edition = "2018"
 
@@ -77,7 +77,7 @@ features = ["dangerous_configuration"]
 
 [dependencies.sp-io]
 git = "https://github.com/encointer/sgx-runtime"
-tag = "v0.6.14"
+tag = "v0.6.15"
 default-features = false
 optional = true
 package = "sp-io"
@@ -110,7 +110,7 @@ default-features = false
 
 [dependencies.substrate-api-client]
 git = "https://github.com/scs/substrate-api-client"
-tag = "v0.4.12"
+tag = "v0.4.13"
 default-features = false
 features = ["full_crypto"]
 
@@ -124,7 +124,7 @@ features = ["sgx"]
 
 [dependencies.sgx-externalities]
 git = "https://github.com/encointer/sgx-runtime"
-tag = "v0.6.14"
+tag = "v0.6.15"
 default-features = false
 
 [dependencies.substratee-node-primitives]
@@ -144,10 +144,10 @@ env_logger = { git = "https://github.com/mesalock-linux/env_logger-sgx", default
 [patch."https://github.com/paritytech/substrate"]
 log = { git = "https://github.com/mesalock-linux/log-sgx", version = "0.4.8" }
 env_logger = { git = "https://github.com/mesalock-linux/env_logger-sgx", default-features = false, features = ["mesalock_sgx"] } 
-sp-io = { path = "../../encointer-sgx-runtime/substrate-sgx/sp-io", default-features = false, features = ["disable_oom", "disable_panic_handler", "disable_allocator", "sgx"]}
-#sp-io = { tag = "v0.6.14", git = "https://github.com/encointer/sgx-runtime", default-features = false, features = ["disable_oom", "disable_panic_handler", "disable_allocator", "sgx"]}
+#sp-io = { path = "../../encointer-sgx-runtime/substrate-sgx/sp-io", default-features = false, features = ["disable_oom", "disable_panic_handler", "disable_allocator", "sgx"]}
+sp-io = { tag = "v0.6.15", git = "https://github.com/encointer/sgx-runtime", default-features = false, features = ["disable_oom", "disable_panic_handler", "disable_allocator", "sgx"]}
 
-[patch."https://github.com/encointer/sgx-runtime"]
-sgx-runtime = { path = "../../encointer-sgx-runtime/runtime", default-features = false }
-sp-io = { path = "../../encointer-sgx-runtime/substrate-sgx/sp-io", default-features = false, features = ["disable_oom", "disable_panic_handler", "disable_allocator", "sgx"]}
-sgx-externalities = { path = "../../encointer-sgx-runtime/substrate-sgx/externalities", default-features = false}
+#[patch."https://github.com/encointer/sgx-runtime"]
+#sgx-runtime = { path = "../../encointer-sgx-runtime/runtime", default-features = false }
+#sp-io = { path = "../../encointer-sgx-runtime/substrate-sgx/sp-io", default-features = false, features = ["disable_oom", "disable_panic_handler", "disable_allocator", "sgx"]}
+#sgx-externalities = { path = "../../encointer-sgx-runtime/substrate-sgx/externalities", default-features = false}
