--- a/stf/Cargo.toml
+++ b/stf/Cargo.toml
@@ -84,7 +84,7 @@ package = "substrate-fixed"
 
 [dependencies.my-node-runtime]
 git = "https://github.com/encointer/encointer-node"
-branch = "sgx-master"
+tag = "v0.3.7-tee"
 package = "encointer-node-teeproxy-runtime"
 optional = true
 
@@ -126,24 +126,24 @@ default-features = false
 [dependencies.sp-io]
 default-features = false
 git = "https://github.com/encointer/sgx-runtime"
-tag = "v0.6.14"
+tag = "v0.6.15"
 features = ["disable_oom", "disable_panic_handler", "disable_allocator", "sgx"]
 optional = true
 
 [dependencies.sgx-runtime]
 default-features = false
 git = "https://github.com/encointer/sgx-runtime"
-tag = "v0.6.14"
+tag = "v0.6.15"
 optional = true
 
 [dependencies.substrate-api-client]
 git = "https://github.com/scs/substrate-api-client"
-tag = "v0.4.12"
+tag = "v0.4.13"
 optional = true
 
 [dependencies.substrate-client-keystore]
 git = "https://github.com/scs/substrate-api-client"
-tag = "v0.4.12"
+tag = "v0.4.13"
 optional = true
 
 [dependencies.sc-keystore]
