--- a/substratee-node-primitives/Cargo.toml
+++ b/substratee-node-primitives/Cargo.toml
@@ -18,14 +18,14 @@ optional = true
 
 [dependencies.my-node-runtime]
 git = "https://github.com/encointer/encointer-node"
-branch = "sgx-master"
+tag = "v0.3.7-tee"
 package = "encointer-node-teeproxy-runtime"
 optional = true
 default-features = false
 
 [dependencies.substrate-api-client]
 git = "https://github.com/scs/substrate-api-client"
-tag = "v0.4.12"
+tag = "v0.4.13"
 optional = true
 
 [dependencies.sp-core]
