--- a/worker/Cargo.toml
+++ b/worker/Cargo.toml
@@ -37,7 +37,7 @@ sgx_crypto_helper 		= { rev = "v1.1.3", git = "https://github.com/apache/teaclav
 
 [dependencies.substrate-api-client]
 git = "https://github.com/scs/substrate-api-client"
-tag = "v0.4.12"
+tag = "v0.4.13"
 
 [dependencies.substratee-node-primitives]
 path = "../substratee-node-primitives"
@@ -47,7 +47,7 @@ path = "worker-api"
 
 [dependencies.my-node-runtime]
 git = "https://github.com/encointer/encointer-node"
-branch = "sgx-master"
+tag = "v0.3.7-tee"
 package = "encointer-node-teeproxy-runtime"
 
 [dependencies.sp-finality-grandpa]
