--- a/enclave/Cargo.toml
+++ b/enclave/Cargo.toml
@@ -138,11 +138,11 @@ branch = "w-nstd"
 default-features = false
 
 [patch.crates-io]
-log = { git = "https://github.com/mesalock-linux/log-sgx", version = "0.4.8" }
+log = { git = "https://github.com/mesalock-linux/log-sgx" }
 env_logger = { git = "https://github.com/mesalock-linux/env_logger-sgx", default-features = false, features = ["mesalock_sgx"] } 
 
 [patch."https://github.com/paritytech/substrate"]
-log = { git = "https://github.com/mesalock-linux/log-sgx", version = "0.4.8" }
+log = { git = "https://github.com/mesalock-linux/log-sgx" }
 env_logger = { git = "https://github.com/mesalock-linux/env_logger-sgx", default-features = false, features = ["mesalock_sgx"] } 
 #sp-io = { path = "../../encointer-sgx-runtime/substrate-sgx/sp-io", default-features = false, features = ["disable_oom", "disable_panic_handler", "disable_allocator", "sgx"]}
 sp-io = { tag = "v0.6.15", git = "https://github.com/encointer/sgx-runtime", default-features = false, features = ["disable_oom", "disable_panic_handler", "disable_allocator", "sgx"]}
